@startuml
class User {
    id: Integer
    username: String
    email: String
    password: String
    phonenumber: String
    user_type: String
    is_admin: Boolean
    date_created: DateTime
    date_updated: DateTime
    id_start: String
}
class FarmData {
    id: Integer
    farm_id: String
    crop_id: Integer
    land_type: String
    tilled_land_size: Float
    planting_date: Date
    season: Integer
    quality: String
    quantity: Integer
    harvest_date: Date
    expected_yield: Float
    actual_yield: Float
    timestamp: DateTime
    channel_partner: String
    destination_country: String
    customer_name: String
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer
    created_by: Integer
    number_of_tree: Integer
    hs_code: String
}
class ProduceCategory {
    id: Integer
    name: String(255)
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer (ForeignKey to User)
    created_by: Integer (ForeignKey to User)
}
class Crop {
    id: Integer
    name: String(255)
    weight: Float
    category_id: Integer (ForeignKey to ProduceCategory)
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer (ForeignKey to User)
    created_by: Integer (ForeignKey to User)
}
class Grade {
    id: Integer
    crop_id: Integer (ForeignKey to Crop)
    grade_value: String(50)
    description: Text
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer (ForeignKey to User)
    created_by: Integer (ForeignKey to User)
}
class CropCoefficient {
    id: Integer
    crop_id: Integer (ForeignKey to Crop)
    stage: String(50)
    kc_value: Float
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer (ForeignKey to User)
    created_by: Integer (ForeignKey to User)
}
class Irrigation {
    id: Integer
    crop_id: Integer (ForeignKey to Crop)
    farm_id: Integer (ForeignKey to Farm)
    irrigation_date: Date
    water_applied: Float
    method: String(100)
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer (ForeignKey to User)
    created_by: Integer (ForeignKey to User)
}
User --> FarmData : created
User --> Crop : created
User --> ProduceCategory : created
User --> Grade : created
User --> CropCoefficient : created
User --> Irrigation : created
User --> Solar : created
User --> Pays : created
Crop --> Grade : has
Crop --> CropCoefficient : has
Crop --> Irrigation : has
ProduceCategory --> Crop : has
@enduml